[FIX] chat align center

--- a/simple-chat/src/components/Chat/Chat.scss
+++ b/simple-chat/src/components/Chat/Chat.scss
@@ -1,4 +1,7 @@
 .chat {
+  position: relative;
+  transform: translateX(-50%);
+  left: 50%;
   width: 500px;
 
   &-header {
