--- a/simple-chat/src/components/Main/Main.scss
+++ b/simple-chat/src/components/Main/Main.scss
@@ -1,5 +1,5 @@
 .main {
-  position: absolute;
+  position: relative;
   transform: translateX(-50%);
   left: 50%;
   width: 500px;
